// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`next-core-web-vitals > next-core-web-vitals 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      ".next/**",
      "out/**",
      "build/**",
      "next-env.d.ts",
    ],
    "overrides": [
      {
        "env": {
          "browser": true,
          "node": true,
        },
        "files": [
          "**/*.{js,jsx,mjs,ts,tsx,mts,cts}",
        ],
        "globals": {
          "AudioWorkletGlobalScope": "readonly",
          "AudioWorkletProcessor": "readonly",
          "WorkletGlobalScope": "readonly",
          "currentFrame": "readonly",
          "currentTime": "readonly",
          "registerProcessor": "readonly",
          "sampleRate": "readonly",
        },
        "plugins": [
          "react",
          "import",
          "jsx-a11y",
        ],
        "rules": {
          "import/no-anonymous-default-export": "warn",
          "jsx-a11y/alt-text": [
            "warn",
            {
              "elements": [
                "img",
              ],
              "img": [
                "Image",
              ],
            },
          ],
          "jsx-a11y/aria-props": "warn",
          "jsx-a11y/aria-proptypes": "warn",
          "jsx-a11y/aria-unsupported-elements": "warn",
          "jsx-a11y/role-has-required-aria-props": "warn",
          "jsx-a11y/role-supports-aria-props": "warn",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react/display-name": "error",
          "react/jsx-key": "error",
          "react/jsx-no-comment-textnodes": "error",
          "react/jsx-no-duplicate-props": "error",
          "react/jsx-no-target-blank": "off",
          "react/jsx-no-undef": "error",
          "react/no-children-prop": "error",
          "react/no-danger-with-children": "error",
          "react/no-direct-mutation-state": "error",
          "react/no-find-dom-node": "error",
          "react/no-is-mounted": "error",
          "react/no-render-return-value": "error",
          "react/no-string-refs": "error",
          "react/no-unescaped-entities": "error",
          "react/no-unknown-property": "off",
          "react/no-unsafe": "off",
          "react/react-in-jsx-scope": "off",
        },
      },
    ],
    "plugins": [
      "nextjs",
    ],
    "rules": {
      "@next/next/google-font-display": "warn",
      "@next/next/google-font-preconnect": "warn",
      "@next/next/inline-script-id": "error",
      "@next/next/next-script-for-ga": "warn",
      "@next/next/no-assign-module-variable": "error",
      "@next/next/no-async-client-component": "warn",
      "@next/next/no-before-interactive-script-outside-document": "warn",
      "@next/next/no-css-tags": "warn",
      "@next/next/no-document-import-in-page": "error",
      "@next/next/no-duplicate-head": "error",
      "@next/next/no-head-element": "warn",
      "@next/next/no-head-import-in-document": "error",
      "@next/next/no-html-link-for-pages": "error",
      "@next/next/no-img-element": "warn",
      "@next/next/no-page-custom-font": "warn",
      "@next/next/no-script-component-in-head": "error",
      "@next/next/no-styled-jsx-in-document": "warn",
      "@next/next/no-sync-scripts": "error",
      "@next/next/no-title-in-document-head": "warn",
      "@next/next/no-typos": "warn",
      "@next/next/no-unwanted-polyfillio": "warn",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "react/no-deprecated",
    ],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-react",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "special parser detected: eslint-config-next/parser",
    "Settings found in config with 'files' pattern (react, import/parsers, import/resolver). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;

exports[`next-core-web-vitals --js-plugins > next-core-web-vitals--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      ".next/**",
      "out/**",
      "build/**",
      "next-env.d.ts",
    ],
    "overrides": [
      {
        "env": {
          "browser": true,
          "node": true,
        },
        "files": [
          "**/*.{js,jsx,mjs,ts,tsx,mts,cts}",
        ],
        "globals": {
          "AudioWorkletGlobalScope": "readonly",
          "AudioWorkletProcessor": "readonly",
          "WorkletGlobalScope": "readonly",
          "currentFrame": "readonly",
          "currentTime": "readonly",
          "registerProcessor": "readonly",
          "sampleRate": "readonly",
        },
        "plugins": [
          "react",
          "import",
          "jsx-a11y",
        ],
        "rules": {
          "import/no-anonymous-default-export": "warn",
          "jsx-a11y/alt-text": [
            "warn",
            {
              "elements": [
                "img",
              ],
              "img": [
                "Image",
              ],
            },
          ],
          "jsx-a11y/aria-props": "warn",
          "jsx-a11y/aria-proptypes": "warn",
          "jsx-a11y/aria-unsupported-elements": "warn",
          "jsx-a11y/role-has-required-aria-props": "warn",
          "jsx-a11y/role-supports-aria-props": "warn",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react/display-name": "error",
          "react/jsx-key": "error",
          "react/jsx-no-comment-textnodes": "error",
          "react/jsx-no-duplicate-props": "error",
          "react/jsx-no-target-blank": "off",
          "react/jsx-no-undef": "error",
          "react/no-children-prop": "error",
          "react/no-danger-with-children": "error",
          "react/no-direct-mutation-state": "error",
          "react/no-find-dom-node": "error",
          "react/no-is-mounted": "error",
          "react/no-render-return-value": "error",
          "react/no-string-refs": "error",
          "react/no-unescaped-entities": "error",
          "react/no-unknown-property": "off",
          "react/no-unsafe": "off",
          "react/react-in-jsx-scope": "off",
        },
      },
    ],
    "plugins": [
      "nextjs",
    ],
    "rules": {
      "@next/next/google-font-display": "warn",
      "@next/next/google-font-preconnect": "warn",
      "@next/next/inline-script-id": "error",
      "@next/next/next-script-for-ga": "warn",
      "@next/next/no-assign-module-variable": "error",
      "@next/next/no-async-client-component": "warn",
      "@next/next/no-before-interactive-script-outside-document": "warn",
      "@next/next/no-css-tags": "warn",
      "@next/next/no-document-import-in-page": "error",
      "@next/next/no-duplicate-head": "error",
      "@next/next/no-head-element": "warn",
      "@next/next/no-head-import-in-document": "error",
      "@next/next/no-html-link-for-pages": "error",
      "@next/next/no-img-element": "warn",
      "@next/next/no-page-custom-font": "warn",
      "@next/next/no-script-component-in-head": "error",
      "@next/next/no-styled-jsx-in-document": "warn",
      "@next/next/no-sync-scripts": "error",
      "@next/next/no-title-in-document-head": "warn",
      "@next/next/no-typos": "warn",
      "@next/next/no-unwanted-polyfillio": "warn",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "react/no-deprecated",
    ],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-react",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "special parser detected: eslint-config-next/parser",
    "Settings found in config with 'files' pattern (react, import/parsers, import/resolver). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;

exports[`next-core-web-vitals --type-aware > next-core-web-vitals--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      ".next/**",
      "out/**",
      "build/**",
      "next-env.d.ts",
    ],
    "overrides": [
      {
        "env": {
          "browser": true,
          "node": true,
        },
        "files": [
          "**/*.{js,jsx,mjs,ts,tsx,mts,cts}",
        ],
        "globals": {
          "AudioWorkletGlobalScope": "readonly",
          "AudioWorkletProcessor": "readonly",
          "WorkletGlobalScope": "readonly",
          "currentFrame": "readonly",
          "currentTime": "readonly",
          "registerProcessor": "readonly",
          "sampleRate": "readonly",
        },
        "plugins": [
          "react",
          "import",
          "jsx-a11y",
        ],
        "rules": {
          "import/no-anonymous-default-export": "warn",
          "jsx-a11y/alt-text": [
            "warn",
            {
              "elements": [
                "img",
              ],
              "img": [
                "Image",
              ],
            },
          ],
          "jsx-a11y/aria-props": "warn",
          "jsx-a11y/aria-proptypes": "warn",
          "jsx-a11y/aria-unsupported-elements": "warn",
          "jsx-a11y/role-has-required-aria-props": "warn",
          "jsx-a11y/role-supports-aria-props": "warn",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react/display-name": "error",
          "react/jsx-key": "error",
          "react/jsx-no-comment-textnodes": "error",
          "react/jsx-no-duplicate-props": "error",
          "react/jsx-no-target-blank": "off",
          "react/jsx-no-undef": "error",
          "react/no-children-prop": "error",
          "react/no-danger-with-children": "error",
          "react/no-direct-mutation-state": "error",
          "react/no-find-dom-node": "error",
          "react/no-is-mounted": "error",
          "react/no-render-return-value": "error",
          "react/no-string-refs": "error",
          "react/no-unescaped-entities": "error",
          "react/no-unknown-property": "off",
          "react/no-unsafe": "off",
          "react/react-in-jsx-scope": "off",
        },
      },
    ],
    "plugins": [
      "nextjs",
    ],
    "rules": {
      "@next/next/google-font-display": "warn",
      "@next/next/google-font-preconnect": "warn",
      "@next/next/inline-script-id": "error",
      "@next/next/next-script-for-ga": "warn",
      "@next/next/no-assign-module-variable": "error",
      "@next/next/no-async-client-component": "warn",
      "@next/next/no-before-interactive-script-outside-document": "warn",
      "@next/next/no-css-tags": "warn",
      "@next/next/no-document-import-in-page": "error",
      "@next/next/no-duplicate-head": "error",
      "@next/next/no-head-element": "warn",
      "@next/next/no-head-import-in-document": "error",
      "@next/next/no-html-link-for-pages": "error",
      "@next/next/no-img-element": "warn",
      "@next/next/no-page-custom-font": "warn",
      "@next/next/no-script-component-in-head": "error",
      "@next/next/no-styled-jsx-in-document": "warn",
      "@next/next/no-sync-scripts": "error",
      "@next/next/no-title-in-document-head": "warn",
      "@next/next/no-typos": "warn",
      "@next/next/no-unwanted-polyfillio": "warn",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "react/no-deprecated",
    ],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-react",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "special parser detected: eslint-config-next/parser",
    "Settings found in config with 'files' pattern (react, import/parsers, import/resolver). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;

exports[`next-core-web-vitals merge > next-core-web-vitals--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      ".next/**",
      "out/**",
      "build/**",
      "next-env.d.ts",
    ],
    "overrides": [
      {
        "env": {
          "browser": true,
          "node": true,
        },
        "files": [
          "**/*.{js,jsx,mjs,ts,tsx,mts,cts}",
        ],
        "globals": {
          "AudioWorkletGlobalScope": "readonly",
          "AudioWorkletProcessor": "readonly",
          "WorkletGlobalScope": "readonly",
          "currentFrame": "readonly",
          "currentTime": "readonly",
          "registerProcessor": "readonly",
          "sampleRate": "readonly",
        },
        "plugins": [
          "react",
          "import",
          "jsx-a11y",
        ],
        "rules": {
          "@next/next/inline-script-id": "error",
          "@next/next/no-assign-module-variable": "error",
          "@next/next/no-document-import-in-page": "error",
          "@next/next/no-duplicate-head": "error",
          "@next/next/no-head-import-in-document": "error",
          "@next/next/no-html-link-for-pages": "warn",
          "@next/next/no-script-component-in-head": "error",
          "@next/next/no-sync-scripts": "warn",
          "import/no-anonymous-default-export": "warn",
          "jsx-a11y/alt-text": [
            "warn",
            {
              "elements": [
                "img",
              ],
              "img": [
                "Image",
              ],
            },
          ],
          "jsx-a11y/aria-props": "warn",
          "jsx-a11y/aria-proptypes": "warn",
          "jsx-a11y/aria-unsupported-elements": "warn",
          "jsx-a11y/role-has-required-aria-props": "warn",
          "jsx-a11y/role-supports-aria-props": "warn",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react/display-name": "error",
          "react/jsx-key": "error",
          "react/jsx-no-comment-textnodes": "error",
          "react/jsx-no-duplicate-props": "error",
          "react/jsx-no-target-blank": "off",
          "react/jsx-no-undef": "error",
          "react/no-children-prop": "error",
          "react/no-danger-with-children": "error",
          "react/no-direct-mutation-state": "error",
          "react/no-find-dom-node": "error",
          "react/no-is-mounted": "error",
          "react/no-render-return-value": "error",
          "react/no-string-refs": "error",
          "react/no-unescaped-entities": "error",
          "react/no-unknown-property": "off",
          "react/no-unsafe": "off",
          "react/react-in-jsx-scope": "off",
        },
      },
    ],
    "plugins": [
      "nextjs",
    ],
    "rules": {
      "@next/next/google-font-display": "warn",
      "@next/next/google-font-preconnect": "warn",
      "@next/next/next-script-for-ga": "warn",
      "@next/next/no-async-client-component": "warn",
      "@next/next/no-before-interactive-script-outside-document": "warn",
      "@next/next/no-css-tags": "warn",
      "@next/next/no-head-element": "warn",
      "@next/next/no-img-element": "warn",
      "@next/next/no-page-custom-font": "warn",
      "@next/next/no-styled-jsx-in-document": "warn",
      "@next/next/no-title-in-document-head": "warn",
      "@next/next/no-typos": "warn",
      "@next/next/no-unwanted-polyfillio": "warn",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "react/no-deprecated",
    ],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-react",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "special parser detected: eslint-config-next/parser",
    "Settings found in config with 'files' pattern (react, import/parsers, import/resolver). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;
